--- a/packages/commons/package.json
+++ b/packages/commons/package.json
@@ -32,6 +32,7 @@
     "effect": ">=3.0.0 <4.0.0"
   },
   "dependencies": {
+    "@smithy/smithy-client": "^4.1.2",
     "@smithy/types": "^4.1.0"
   },
   "main": "build/cjs/index.js",
