--- a/.github/workflows/snapshot.yml
+++ b/.github/workflows/snapshot.yml
@@ -13,11 +13,21 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 10
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: lts/*
+          cache: pnpm
       - name: Install dependencies
-        uses: ./.github/actions/setup
-      - name: Build package
-        run: pnpm run build
+        run: pnpm i --frozen-lockfile
+      - name: build
+        run: pnpm exec projen build
       - name: Create snapshot
         id: snapshot
         run: pnpx pkg-pr-new@0.0.28 publish --pnpm --comment=off ./packages/*
