--- a/packages/commons/package.json
+++ b/packages/commons/package.json
@@ -25,9 +25,11 @@
     "organization": false
   },
   "devDependencies": {
+    "@aws-sdk/middleware-logger": "^3.734.0",
     "@types/node": "ts5.4",
     "effect": "3.10.16",
-    "typescript": "^5.4.2"
+    "typescript": "^5.4.2",
+    "vitest-mock-extended": "^2.0.2"
   },
   "peerDependencies": {
     "effect": ">=3.0.4 <4.0.0"
